tests/errors/compiler/wrong_struct/empty_struct.c
struct st {} s = 1;

void main()
{
	print(s);
}
